# elm-architecture-haskell

./: Elm Architecture Talk.md  README.md  elm-architecture-talk.cabal  elm-architecture.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: ElmArchitecture.hs  Lib.hs  WebCrawler.hs
