name: elm-architecture
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/elm-architecture#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/elm-architecture

library
    exposed-modules:
        Lib
    build-depends:
        base >=4.7 && <5,
        async -any
    default-language: Haskell2010
    hs-source-dirs: src

executable elm-architecture-exe
    main-is: Main.hs
    build-depends:
        base -any,
        elm-architecture -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite elm-architecture-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        elm-architecture -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
